Tue Jan  3 18:34:18 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/valgrind.supp:
          Added default suppress file that can be used for valgrind when using
          valgrind for ACE/TAO/CIAO/DAnCE

        * docs/bczar/bczar.html:
          Added package

Tue Jan  3 13:51:18 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/performance_stats.sh:
          Create source directory

Tue Jan  3 12:52:04 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/performance_stats.sh:
        * bin/topinfo_iorsize_stats.sh:
        * bin/topinfo_simple_stats.sh:
        * bin/topinfo_stats.sh:
        * bin/footprint_stats.sh:
          Converting them to support a flat layout

Tue Jan  3 12:40:43 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * html/Stats/detailed_footprint.shtml:
        * html/Stats/detailed_performance.shtml:
        * html/Stats/footer.html:
        * html/Stats/index.shtml:
        * html/Stats/navigation.html:
          Updated links, docu, status

        * html/Stats/compilation.shtml:
          Removed this file.

Sat Dec 31 22:12:53 UTC 2011  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Timer_Wheel_T.cpp: Changed the call to "delete root" in the
          destructor to "this->free_node (root)" so the ACE_Timer_Wheel_T
          will work properly when provided a custom allocator.  Thanks to
          Koh <k_onishi at mtj dot biglobe dot ne dot jp> for reporting
          this bug and providing a fix.

Fri Dec 30 10:13:59 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-linux.h:
          Added support for ulibc, thanks to Chong Wuk Pak
          <chong dot pak at lmco dot com> for providing the patch. This fixes
          bugzilla 3999

Thu Dec 29 17:29:06 UTC 2011  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Mem_Map.cpp (ACE_Mem_Map::map_it): Fixed a missing '('.  Thanks to Johnny for reporting this.
